# django-psutil-dash

./: LICENSE  Readme.md  pyproject.toml
django_psutil_dash/: apps.py  stats.py  urls.py  views.py
django_psutil_dash/templates/psutildash/: base.html  dashboard.html  disks.html  layout.html  network.html  processes.html
