[tool.poetry]
name = "django-psutil-dash"
version = "0.1.3"
description = ""
authors = ["tsarbas"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psutil = "^5.9.8"
humanize = "^4.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
